Bug 152515 - PrintOut Unlike the display, some characters are rotated.(Windows Only)
Summary: PrintOut Unlike the display, some characters are rotated.(Windows Only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords:
Depends on:
Blocks: CJK Vertical-Text
  Show dependency treegraph
 
Reported: 2022-12-15 06:58 UTC by Saburo
Modified: 2025-02-08 18:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
SampleFile (22.91 KB, application/vnd.oasis.opendocument.text)
2022-12-15 06:58 UTC, Saburo
Details
Windows 11 Printing Image (71.09 KB, application/pdf)
2022-12-15 07:00 UTC, Saburo
Details
Windows 10 Printing Image (71.13 KB, application/pdf)
2022-12-15 07:00 UTC, Saburo
Details
Screenshot Writer on windows11 and yesterdaypdf(print image) (354.31 KB, image/png)
2022-12-16 02:26 UTC, Saburo
Details
printpreview (106.02 KB, image/png)
2022-12-16 02:26 UTC, Saburo
Details
print dialog (161.03 KB, image/png)
2022-12-16 02:27 UTC, Saburo
Details
Scanned printed paper (339.33 KB, image/png)
2022-12-16 02:30 UTC, Saburo
Details
screen clip of sample doc (attachment 184150) opened in LO 7.4.3.2 and then exported to PDF, clip from Adobe Acrobat (110.05 KB, image/png)
2022-12-16 03:51 UTC, V Stuart Foote
Details
Microsoft Print to PDF (4.13 MB, application/pdf)
2022-12-16 15:15 UTC, Saburo
Details
Microsoft Print to PDF (140.26 KB, image/png)
2022-12-16 15:32 UTC, Saburo
Details
Output result of Microsoft Print to PDF (217.91 KB, image/png)
2022-12-20 13:53 UTC, Shinji Enoki
Details
Font(VL Gothic) Microsoft Print to PDF (110.57 KB, application/pdf)
2022-12-24 07:18 UTC, Saburo
Details
Word vs Writer comparison (19.11 KB, image/png)
2025-01-08 09:13 UTC, Jonathan Clark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2022-12-15 06:58:02 UTC
Description:
Vertical writing.
Unlike the display, some characters are rotated.
<(U+ff1c)>(U+ff1e)≪(U+226a)≫(U+226b)

Steps to Reproduce:
1.Page Style - Text direction : Right-to-left(vertical)
2.Input <(U+ff1c) any charactors.
3.Print

Actual Results:
Some characters were rotated in the print.

Expected Results:
I want the output to be as displayed


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 12; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 Saburo 2022-12-15 06:58:48 UTC
Created attachment 184150 [details]
SampleFile
Comment 2 Saburo 2022-12-15 07:00:10 UTC
Created attachment 184151 [details]
Windows 11 Printing Image

IPA P Gothic
Rotate HIRAGANA KATAKANA other
Comment 3 Saburo 2022-12-15 07:00:51 UTC
Created attachment 184152 [details]
Windows 10 Printing Image
Comment 4 V Stuart Foote 2022-12-15 15:06:32 UTC
Please provide a PNG image of the expected layout next to the actual layout, use a screen clip and highlight. Please use the Windows snipping tool, or simialr, to obtain and highlight.

Also, is your concern with the format in the PDF (as you attached), or when printed to a printer?
Comment 5 Saburo 2022-12-16 02:26:07 UTC
Created attachment 184170 [details]
Screenshot Writer on windows11 and yesterdaypdf(print image)
Comment 6 Saburo 2022-12-16 02:26:48 UTC
Created attachment 184171 [details]
printpreview
Comment 7 Saburo 2022-12-16 02:27:11 UTC
Created attachment 184172 [details]
print dialog
Comment 8 Saburo 2022-12-16 02:30:01 UTC
Created attachment 184173 [details]
Scanned printed paper

inkjet printer Canon iP4830
Comment 9 Saburo 2022-12-16 02:33:18 UTC
(In reply to V Stuart Foote from comment #4)
> Please provide a PNG image of the expected layout next to the actual layout,
> use a screen clip and highlight. Please use the Windows snipping tool, or
> simialr, to obtain and highlight.
> 
> Also, is your concern with the format in the PDF (as you attached), or when
> printed to a printer?

Yesterday's PDF was created with pdf printer.

Why is the output not as shown in the print preview or print dialog?
Comment 10 QA Administrators 2022-12-16 03:19:38 UTC Comment hidden (obsolete)
Comment 11 V Stuart Foote 2022-12-16 03:29:50 UTC
Can not confirm with current nightly against 7.6.0.

I can't spot an exact patch in gerrit but Khaled has done a lot of work recently on the hb font handling for PDF export. Now looks like all the CJK brackets are correctly rotating to the vertical variant--on Windows at least.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

The issue appears to be PDF export only, with OP testing with 7.4.3 but showing OK print previews.

For me the rotated bracket vertical alternates in PDF export work correctly with a build of Nightly against 7.6.0; or if I use a ghostscript based "print to PDF" print path.

So, please retest PDF export with current nightly build found here:

https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/

Then install in parallel [1]

You can also check for font/LibreOffice support of the full set of rotated alternates as listed in ICU UAX #50 [2]

=-ref-=
[1] https://wiki.documentfoundation.org/Installing_in_parallel/Windows/ja

[2] UAX 50 -- http://www.unicode.org/reports/tr50/
Comment 12 V Stuart Foote 2022-12-16 03:51:03 UTC
Created attachment 184174 [details]
screen clip of sample doc (attachment 184150 [details]) opened in LO 7.4.3.2 and then exported to PDF, clip from Adobe Acrobat

Seems correct for me with LO 7.4.3.2, though all three fonts showed they'd received system font fall backs for this install. 

So is this maybe a font issue for OPs system--partial font? Or a bracket glyph without the vertical alternates (that seems unlikely).

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 13 Saburo 2022-12-16 11:32:56 UTC
(In reply to V Stuart Foote from comment #11)
> The issue appears to be PDF export only, with OP testing with 7.4.3 but
> showing OK print previews.
No.
This issue is only for printing.
[Export As PDF...] does not have this issue.

LO7.6.0 doesn't seem to change this issue.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 12; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 14 V Stuart Foote 2022-12-16 14:25:32 UTC
So vcl canvas, print preview, and seemingly LibreOffice export to PDF--are all correct on your systems.

Issue is with your print queue (Canon iP4830). Or print to PDF--a ghostscript based software printer, looks like PDF24 for attachment 184151 [details] and attachment 184152 [details]. Do you get same result using the Microsoft built-in "Microsoft Print to PDF" printer, it should be available on your systems?

When I use the MS Windows built in 'Microsoft Print to PDF' printer the brackets all rotate to vertical variant (both 7.4.3 and master against 7.5); but again the font embedded shows as CID-keyed fallbacks since I don't have the fonts of the original test document (attachment 184150 [details]).

Other than trying the Microsoft provided PDF print, does changing from Vulkan rendering to Skia software (frame based) rendering change the printing of the rotated alternate brackets?
Comment 15 Saburo 2022-12-16 15:15:32 UTC
Created attachment 184188 [details]
Microsoft Print to PDF
Comment 16 Saburo 2022-12-16 15:22:40 UTC
Noto Sans JP' is garbled in 'Microsoft Print to PDF' and other applications.


Turning Skia off does not change this.
Comment 17 Saburo 2022-12-16 15:32:03 UTC
Created attachment 184190 [details]
Microsoft Print to PDF
Comment 18 V Stuart Foote 2022-12-16 16:11:46 UTC
@Khaled, Kevin -- I'm stumped on this.

Internally OP shows we are good to canvas, good to print preview, good on LO export to PDF

But on print to PDF (ghostscript or Microsoft's internal), and apparently some print PPDs, omit the vertical alternate glyphs for some--not all--glyphs.

A font issue?

Which I can't test too deeply, wrong locale and missing fonts--so I'm getting fallback for the CID-keycodes anyhow, but I'm not seeing any incorrect glyphs for the brackets in vertical mode text as I print to PDF. Likewise no issue when I print to a Brother HL-6200DW laser printer.
Comment 19 Shinji Enoki 2022-12-20 13:48:24 UTC
Reproduced in:

Windows 11 Enterprise Evaluaton (on Virtualbox)
Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: ja-JP
Calc: threaded

It was reproduced by the following steps:
1. Open Sabro-san's SampleFile
2. Choose menu [File]>[Print]
3. Choose "Microsoft Print to PDF" in "Printer" of "Print dialog"
4. Open PDF file
Comment 20 Shinji Enoki 2022-12-20 13:53:08 UTC
Created attachment 184269 [details]
Output result of Microsoft Print to PDF

When I open the output PDF, the display is different in Adobe Reader, Edge and Firefox. Text rotates in Firefox, but garbled otherwise
Comment 21 Shinji Enoki 2022-12-20 13:54:49 UTC
> When I open the output PDF, the display is different in Adobe Reader, Edge
> and Firefox. Text rotates in Firefox, but garbled otherwise

Sorry, I made a mistake in my comment. Text rotates in Edge, but garbled otherwise.
Comment 22 Saburo 2022-12-24 07:18:58 UTC
Created attachment 184334 [details]
Font(VL Gothic) Microsoft Print to PDF

VL Gothic(2022-06-12)
rotate "(" U+FF08 , ")" U+FF09
Comment 23 QA Administrators 2025-01-02 03:10:51 UTC Comment hidden (obsolete)
Comment 24 Saburo 2025-01-07 10:14:54 UTC
I tested it and it still happens.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f4a3ffe1110aa38a3836533e6c51b910c68c2336
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f4a3ffe1110aa38a3836533e6c51b910c68c2336
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 25 V Stuart Foote 2025-01-07 11:51:54 UTC
@Jonathan, could you have a look...
Comment 26 Jonathan Clark 2025-01-08 09:13:51 UTC
Created attachment 198429 [details]
Word vs Writer comparison

Screenshot showing glyph orientation differences between Word (left) and Writer (right). Note the highlighted character.
Comment 27 Saburo 2025-01-09 08:03:30 UTC
There may be a need to add an option to change the display itself for compatibility with Word, but the problem here is that when you print it, you get something different than what you see on the screen (WYSIWYG).

For vertically written documents, I export them to PDF and then print the PDF.
Comment 28 Jonathan Clark 2025-01-09 11:17:07 UTC
The root cause for this bug is the way vertical printing is implemented on Windows. Rather than rotating glyphs as needed, the current implementation tries to substitute the glyphs with those from a fallback vertical @-font by index.
Comment 29 Commit Notification 2025-01-09 13:50:48 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b06e7814d2edbc369b7c441941c3392df1266423

tdf#152515 vcl: Implement Win32 vert CJK printing for all fonts

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Volga 2025-01-09 14:18:33 UTC
Is it possible to backport to version 24.2.0 channel?
Comment 31 Commit Notification 2025-01-10 10:34:00 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/18db684ea04abf4e5b6b1b63e395f4f9fc105975

tdf#152515 vcl: Implement Win32 vert CJK printing for all fonts

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Saburo 2025-01-11 06:08:18 UTC
I have confirmed that the issue is resolved.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9ae567c791bcffdc3fff9e3fb11b46275a13d2b
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 33 Buovjaga 2025-02-08 18:48:57 UTC
(In reply to Volga from comment #30)
> Is it possible to backport to version 24.2.0 channel?

No, it's end of life since Nov 2024: https://wiki.documentfoundation.org/ReleasePlan/24.2#End_of_Life