vcl/inc/win/winlayout.hxx
@@ -42,9 +42,10 @@ public:
     WinSalGraphics* GetGraphics() const { return m_pGraphics; }
 
     HFONT GetHFONT() const { return m_hFont; }
+    HFONT GetVerticalHFONT() const { return m_hVerticalFont; }
+
     // Return true if the font is for vertical writing.
-    // I.e. the font name of the LOGFONT is prefixed with '@'.
-    bool  IsCJKVerticalFont() const { return m_bIsCJKVerticalFont; }
+    bool IsCJKVerticalFont() const { return m_hVerticalFont != nullptr; }
     sal_Int32 GetTmDescent() const { return m_nTmDescent; }
 
     const WinFontFace * GetFontFace() const { return static_cast<const WinFontFace *>(LogicalFontInstance::GetFontFace()); }
@@ -61,7 +62,7 @@ private:
 
     WinSalGraphics *m_pGraphics;
     HFONT m_hFont;
-    bool  m_bIsCJKVerticalFont;
+    HFONT m_hVerticalFont = nullptr;
     sal_Int32 m_nTmDescent;
     mutable sal::systools::COMReference<IDWriteFontFace> mxDWFontFace;
 };
